	'src/common/codec.h'.
	* Removed the 'Codec::signalAudioWritten()' method in
	'src/common/codec.cpp' and 'src/common/codec.h'.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'hostname' and 'port' parameters from the
	'Connector::connectToHostConnector()' method in
	'src/common/connector.cpp' and 'src/common/connector.h'.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'File' connector in 'src/glassplayer/conn_file.cpp' and
	'src/glassplayer/conn_file.h'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Enabled playout of local files.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a Passthrough codec in 'src/glassplayer/codec_pass.cpp' and
	'src/glassplayer/codec_pass.h'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added 'audio/x-wav', 'audio/wav', 'audio/wave', 'audio/vnd.wave',
	'audio/aiff', 'audio/x-aiff', 'audio/basic', 'audio/x-au',
	'audio/voc', 'audio/x-voc', 'audio/x-adpcm', 'audio/x-flac' and
	'application/ogg' mimetypes for the Passthrough codec in
	'src/common/codec.cpp'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glasscoder/glasscoder.cpp' where the
	descructors would fail to be executed upon reception of a SIGINT
	or SIGTERM signal.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added '|' character to separate the source and parameter name
	fields in statistics data.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CmdSwitch::addOverlay()' method in
	'src/common/cmdswitch.cpp' and 'src/common/cmdswitch.h'.
	* Implemented a run-control file for glassplayer(1) at
	'/etc/glassplayer.conf' and '$HOME/glassplayerrc'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out a glassplayergui(1) applet in 'src/glassplayergui/'.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Got glassplayergui(1) working with XCast servers.